``` feat: Implement Color Picker and enhance Note Editing
- Add `sheetCore` and `color` modules.
- Integrate `materialKolor` library.
- Introduce a color picker dialog for text color selection.
- Update `SlackPanelButton` to use `primaryContainer` for selection background.
- Update `SlackPanel` to include a color picker and text formatting options.
- Update `HomeScreen` NoteItem with edit , delete , copy , share.
- Update `Constants` to add more colors
- Update `AddEditNoteScreen` , `Theme`, `settings.gradle.kts`, `build.gradle.kts`, `gradle.properties`, `libs.versions.toml`.